fix bug overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,12 +19,6 @@ html {
    overflow-y: scroll;
    scrollbar-width: none;
 }
-body {
-   overflow: hidden;
-}
-main {
-   overflow: hidden;
-}
 button {
    background-color: transparent;
 }
@@ -133,10 +127,11 @@ button {
 .screen1__scroll::before {
    content: "";
    display: block;
-   width: 100%;
+   width: 100px;
    height: 40px;
-   background: linear-gradient(90deg, rgba(255,0,0,0) 80%, rgb(248, 248, 248) 100%);;
+   background: linear-gradient(90deg, rgba(255,0,0,0) 0%, #F8F8F8 95%);
    position: absolute;
+   right: 0;
    z-index: 2;
 }
 .screen1__subheader-container {
